feat: 🎸 v2 working, and minimal layout

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,10 @@ input {
   margin: 0 auto;
 }
 
+.prop-item {
+  @apply inline-block ml-3;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
